Feat: AccessDeniedException 예외처리 기능 구현