@@ -1,15 +1,16 @@
 package com.project.goalchallenge.global.exception;
 
 import static com.project.goalchallenge.global.exception.ErrorCode.BAD_REQUEST_VALID_ERROR;
+import static com.project.goalchallenge.global.exception.ErrorCode.FORBIDDEN;
 import static com.project.goalchallenge.global.exception.ErrorCode.INTERNAL_SERVER_ERROR;
 
 import com.project.goalchallenge.domain.challenge.exception.ChallengeException;
 import com.project.goalchallenge.domain.member.exception.MemberException;
 import com.project.goalchallenge.domain.participant.exception.ParticipantException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -47,11 +48,19 @@ public class GlobalExceptionHandler {
     List<String> errors = e.getBindingResult().getAllErrors()
         .stream()
         .map(DefaultMessageSourceResolvable::getDefaultMessage)
-        .collect(Collectors.toList());
+        .toList();
     log.error("Exception \"{}({})\" is occurred.", BAD_REQUEST_VALID_ERROR, errors.get(0));
     return new ErrorResponse(
         BAD_REQUEST_VALID_ERROR, 400, errors.get(0));
 
+  }
+
+  @ExceptionHandler(AccessDeniedException.class)
+  public ErrorResponse handleAccessDeniedException(AccessDeniedException e) {
+
+    log.error("Exception \"{}({})\" is occurred.", FORBIDDEN, e.getMessage());
+    return new ErrorResponse(
+        FORBIDDEN, FORBIDDEN.getStatus(), FORBIDDEN.getMessage());
   }
 
   @ExceptionHandler(SystemException.class)
